added api to twowire for fake i2c comms

--- a/extras/opengl/examples/basic/CMakeLists.txt
+++ b/extras/opengl/examples/basic/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-project(teensy_st7735_linux_extras_opengl_examples_basic C CXX)
+project(teensy_u8g2_opengl_examples_basic C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(teensy_x86_stubs)
 include_directories(${teensy_x86_stubs_INCLUDE_DIR})
+
+find_package(teensy_x86_twowire_stubs)
+include_directories(${teensy_x86_twowire_stubs_INCLUDE_DIR})
 
 find_package(teensy_x86_u8g2_stubs)
 include_directories(${teensy_x86_u8g2_stubs_INCLUDE_DIR})
@@ -19,6 +22,7 @@ add_executable(basic graphicstest.cpp)
 target_link_libraries(basic ${teensy_x86_stubs_LIBS})
 target_link_libraries(basic ${teensy_x86_u8g2_stubs_LIBS})
 target_link_libraries(basic ${teensy_x86_u8g2_stubs_opengl_LIBS})
+target_link_libraries(basic ${teensy_x86_twowire_stubs_LIBS})
 
 include(../../opengl.cmake.in)
 target_link_libraries(basic ${LIBS})
