--- a/extras/opengl/src/CMakeLists.txt
+++ b/extras/opengl/src/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(teensy_x86_u8g2_stubs_opengl CXX)
 set(teensy_x86_u8g2_stubs_opengl_VERSION 1.0.0)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(teensy_x86_stubs)
 message(INFO teensy_x86_stubs_INCLUDE_DIR ${teensy_x86_stubs_INCLUDE_DIR})
@@ -14,7 +14,7 @@ include_directories(${teensy_x86_u8g2_stubs_INCLUDE_DIR})
 include(../opengl.cmake.in)
 
 set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/include/teensy_x86_u8g2_stubs_opengl/)
-set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib/teensy_x86_u8g2_stubs_opengl )
+#set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib/teensy_x86_u8g2_stubs_opengl )
 
 set(HEADER_FILES
         u8g2_opengl.h
