--- a/extras/opengl/examples/basic/CMakeLists.txt
+++ b/extras/opengl/examples/basic/CMakeLists.txt
@@ -18,12 +18,17 @@ include_directories(${teensy_x86_keypad_stubs_INCLUDE_DIR})
 find_package(teensy_x86_mpr121_stubs)
 include_directories(${teensy_x86_mpr121_stubs_INCLUDE_DIR})
 
+#find_package(imgui REQUIRED)
+#find_path(STB_INCLUDE_DIRS "stb.h")
+
 include_directories(../../src)
+include_directories(../../imgui)
 
 add_definitions(-fms-extensions)
 add_definitions(-DArduino=146)
 
 add_executable(basic graphicstest.cpp)
+#target_include_directories(basic ${STB_INCLUDE_DIRS})
 
 target_link_libraries(basic ${teensy_x86_stubs_LIBS})
 target_link_libraries(basic ${teensy_x86_u8g2_stubs_LIBS})
@@ -33,6 +38,7 @@ target_link_libraries(basic ${teensy_x86_keypad_stubs_LIBS})
 target_link_libraries(basic ${teensy_x86_mpr121_stubs_LIBS})
 include(../../opengl.cmake.in)
 target_link_libraries(basic ${LIBS})
+target_link_libraries(basic -L../../../lib imgui)
 
 if  (APPLE)
         target_link_libraries(basic
