--- a/extras/opengl/src/CMakeLists.txt
+++ b/extras/opengl/src/CMakeLists.txt
@@ -15,7 +15,6 @@ find_package(imgui REQUIRED)
 find_path(STB_INCLUDE_DIRS "stb.h")
 
 include(../opengl.cmake.in)
-
 set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/include/teensy_x86_u8g2_stubs_opengl/)
 #set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib/teensy_x86_u8g2_stubs_opengl )
 
@@ -24,6 +23,7 @@ set(HEADER_FILES
         u8g2_opengl_main.h)
 
 include_directories(../imgui)
+include_directories(../../xr1)
 
 add_library(teensy_x86_u8g2_stubs_opengl INTERFACE ${HEADER_FILES})
 target_include_directories(teensy_x86_u8g2_stubs_opengl ${STB_INCLUDE_DIRS})
