--- a/extras/opengl/imgui/CMakeLists.txt
+++ b/extras/opengl/imgui/CMakeLists.txt
@@ -1,12 +1,8 @@
-This file is compiled from imgui with the following cmake file
-(at the root of the imgui folder)
-
-```cmake
 cmake_minimum_required(VERSION 3.10)
 project(imgui C CXX)
 set(CMAKE_CXX_STANDARD 11)
 
-include(opengl.cmake.in)
+include(../opengl.cmake.in)
 include_directories(.)
 add_library(imgui
         imgui.cpp
@@ -14,7 +10,6 @@ add_library(imgui
         imgui_draw.cpp
         imgui_tables.cpp
         imgui_widgets.cpp
-        backends/imgui_impl_glfw.cpp
-        backends/imgui_impl_opengl3.cpp
+        imgui_impl_glfw.cpp
+        imgui_impl_opengl3.cpp
 )
-```
