--- a/extras/opengl/src/CMakeLists.txt
+++ b/extras/opengl/src/CMakeLists.txt
@@ -5,7 +5,6 @@ set(teensy_x86_u8g2_stubs_opengl_VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(teensy_x86_stubs)
-message(INFO teensy_x86_stubs_INCLUDE_DIR ${teensy_x86_stubs_INCLUDE_DIR})
 include_directories(${teensy_x86_stubs_INCLUDE_DIR})
 
 find_package(teensy_x86_u8g2_stubs)
@@ -19,7 +18,16 @@ include_directories(${teensy_x86_tlc5947_stubs_INCLUDE_DIR})
 
 include(../opengl.cmake.in)
 set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/include/teensy_x86_u8g2_stubs_opengl/)
-#set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib/teensy_x86_u8g2_stubs_opengl )
+set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib/teensy_x86_u8g2_stubs_opengl )
+
+set(SOURCE_FILES
+        ../imgui/imgui.cpp
+        ../imgui/imgui_demo.cpp
+        ../imgui/imgui_draw.cpp
+        ../imgui/imgui_tables.cpp
+        ../imgui/imgui_widgets.cpp
+        ../imgui/imgui_impl_glfw.cpp
+        ../imgui/imgui_impl_opengl3.cpp)
 
 set(HEADER_FILES
         u8g2_opengl.h
@@ -36,7 +44,8 @@ set(HEADER_FILES
 include_directories(../imgui)
 include_directories(../../xr1)
 
-add_library(teensy_x86_u8g2_stubs_opengl INTERFACE ${HEADER_FILES})
+
+add_library(teensy_x86_u8g2_stubs_opengl STATIC ${SOURCE_FILES} ${HEADER_FILES})
 
 set_target_properties(teensy_x86_u8g2_stubs_opengl PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")
 
