--- a/extras/opengl/src/CMakeLists.txt
+++ b/extras/opengl/src/CMakeLists.txt
@@ -17,10 +17,12 @@ find_package(teensy_x86_tlc5947_stubs)
 include_directories(${teensy_x86_tlc5947_stubs_INCLUDE_DIR})
 
 include(../opengl.cmake.in)
+
 set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/include/teensy_x86_u8g2_stubs_opengl/)
 set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib/teensy_x86_u8g2_stubs_opengl )
 
 set(SOURCE_FILES
+        libs/stbi/stb_image_aug.c
         ../imgui/imgui.cpp
         ../imgui/imgui_demo.cpp
         ../imgui/imgui_draw.cpp
