--- a/extras/opengl/opengl.cmake.in
+++ b/extras/opengl/opengl.cmake.in
@@ -9,6 +9,13 @@ include_directories(${glfw_INCLUDE_DIRS})
 
 pkg_search_module(glew REQUIRED glew)
 include_directories(${glew_INCLUDE_DIRS})
+
+find_package(assimp REQUIRED)
+include_directories(/usr/local/Cellar/assimp/5.3.1/include/)
+
+find_package(GLM REQUIRED)
+include_directories(/usr/local/Cellar/glm/0.9.9.8/include)
+
 if(WIN32)
     set(LIBS glfw3 opengl32)
 elseif(UNIX AND NOT APPLE)
